--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,10 +3,10 @@
 
   #- title: "Blog"
   #href: "/blog/"
-- title: "Form 1"
-  href: "/form1/"
-- title: "Resources"
-  href: "/resources/"
+  #- title: "Form 1"
+  #href: "/form1/"
+  #- title: "Resources"
+  #href: "/resources/"
   #  subcategories:
   #  - subtitle: "Item 1"
   #   subhref: "/resources/item-1/"
