--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: CICS-Resist
-email: your-email@domain.com
+#email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  We are a group of graduate students that are attempting to make change through strategic initiatives.
+  We are a group of graduate students that are attempting to make change through strategic initiatives. Our opinions are our own and do not reflect any official stance on behalf of the College of Information and Computer Sciences or the University of Massachusetts. 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://cics-resist.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+#github_username:  jekyll
 
 # Build settings
 markdown: kramdown
