--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: CICS-Resist
 description: > # this means to ignore newlines until "baseurl:"
   We are a group of graduate students that are attempting to make change through strategic initiatives. Our opinions are our own and do not reflect any official stance on behalf of the College of Information and Computer Sciences or the University of Massachusetts. 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://cicsresist.org" # the base hostname & protocol for your site
+url: "https://cicsresist.org" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
