--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,6 +1,7 @@
 - title: "About Us"
   href: "/about/"
-
+- title: "Donate"
+  href: "http://paypal.me/cicsresist"
   #- title: "Blog"
   #href: "/blog/"
   #- title: "Form 1"
